cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_CPH__c.field-meta.xml
<CustomField>
    <fullName>APHA_CPH__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CPH being tested</description>
    <label>CPH</label>
    <referenceTo>APHA_CPH__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>