cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_InvitationCode__c.field-meta.xml
<CustomField>
    <fullName>APHA_InvitationCode__c</fullName>
    <label>Invitation Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>