cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ReasonForTest__c.field-meta.xml
<CustomField>
    <fullName>APHA_ReasonForTest__c</fullName>
    <description>The reason for this test.</description>
    <label>Reason for test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radial</fullName>
            </value>
            <value>
                <fullName>6W</fullName>
            </value>
            <value>
                <fullName>6M</fullName>
            </value>
            <value>
                <fullName>12M</fullName>
            </value>
            <value>
                <fullName>48M</fullName>
            </value>
            <value>
                <fullName>Pre-Movement</fullName>
            </value>
            <value>
                <fullName>Post-Movement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>