cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResponseDate__c</fullName>
    <description>Date response received</description>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>