cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ResponseExpectedBy__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResponseExpectedBy__c</fullName>
    <description>Latest date response expected</description>
    <label>Response Expected By</label>
    <type>Date</type>
</CustomField>