cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ResponseOutcome__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResponseOutcome__c</fullName>
    <description>The reason for this test.</description>
    <label>Response Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Refuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>