cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ResponsePercentageToVaccinate__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResponsePercentageToVaccinate__c</fullName>
    <description>% of herd to vaccinate</description>
    <label>Response % to vaccinate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>