cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ResponseSchedulingPreference__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResponseSchedulingPreference__c</fullName>
    <description>Vaccination scheduling preference</description>
    <label>Response scheduling preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Test Day 2</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>