cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ResponseTimescalePreference__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResponseTimescalePreference__c</fullName>
    <description>Preferred timescale for vaccination</description>
    <label>Response timescale preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>