cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_ReviewedBy__c.field-meta.xml
<CustomField>
    <fullName>APHA_ReviewedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user progressing Status to &quot;Expired&quot;, &quot;Rejected&quot; or &quot;Complete&quot;</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APHA_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>