cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_TestWindowEndDate__c.field-meta.xml
<CustomField>
    <fullName>APHA_TestWindowEndDate__c</fullName>
    <description>Latest date for test</description>
    <label>Test Window End Date</label>
    <type>Date</type>
</CustomField>