cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_TestWindowStartDate__c.field-meta.xml
<CustomField>
    <fullName>APHA_TestWindowStartDate__c</fullName>
    <description>Earliest date for test</description>
    <label>Test Window Start Date</label>
    <type>Date</type>
</CustomField>