cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_TotalNumberOfInconclusiveReactors__c.field-meta.xml
<CustomField>
    <fullName>APHA_TotalNumberOfInconclusiveReactors__c</fullName>
    <description>Rollup - Sum of Test Parts - Number of Inconclusive Reactors</description>
    <label>Total Number of Inconclusive reactors</label>
    <summarizedField>APHA_TestPart__c.APHA_NumberOfInconclusiveReactors__c</summarizedField>
    <summaryForeignKey>APHA_TestPart__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>