cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_TotalNumberOfReactors__c.field-meta.xml
<CustomField>
    <fullName>APHA_TotalNumberOfReactors__c</fullName>
    <description>Rollup - Sum of Test Parts - Number of Reactors</description>
    <label>Total Number of Reactors</label>
    <summarizedField>APHA_TestPart__c.APHA_NumberOfReactors__c</summarizedField>
    <summaryForeignKey>APHA_TestPart__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>