cattlevax-sf-sandbox/force-app/main/default/objects/Case/fields/APHA_TotalNumberOfTested__c.field-meta.xml
<CustomField>
    <fullName>APHA_TotalNumberOfTested__c</fullName>
    <description>Rollup - Sum of Number Tested</description>
    <label>Total Number of Tested</label>
    <summarizedField>APHA_TestPart__c.APHA_NumberTested__c</summarizedField>
    <summaryForeignKey>APHA_TestPart__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>