cattlevax-sf-sandbox/force-app/main/default/objects/Case/recordTypes/APHA_CattleVax.recordType-meta.xml
<RecordType>
    <fullName>APHA_CattleVax</fullName>
    <active>true</active>
    <businessProcess>Cattle Vax</businessProcess>
    <description>Cattle Vax</description>
    <label>Cattle Vax</label>
</RecordType>