cattlevax-sf-sandbox/force-app/main/default/objects/Case/validationRules/APHA_ReasonForTestRequiredForCattleVax.validationRule-meta.xml
<ValidationRule>
    <fullName>APHA_ReasonForTestRequiredForCattleVax</fullName>
    <active>false</active>
    <description>Reason for Test is required for Cattle Vax Cases</description>
    <errorConditionFormula>AND(ISBLANK(TEXT(APHA_ReasonForTest__c)), RecordType.DeveloperName = &apos;APHA_CattleVax&apos;)</errorConditionFormula>
    <errorMessage>Reason for Test is required for Cattle Vax Cases</errorMessage>
</ValidationRule>