cattlevax-sf-sandbox/force-app/main/default/objects/Case/listViews/Overdue_Vaccination_Invitations.listView-meta.xml
<ListView>
    <fullName>Overdue_Vaccination_Invitations</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>APHA_CPH__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>APHA_ResponseExpectedBy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Bovine TB Vaccination Invitation</value>
    </filters>
    <filters>
        <field>APHA_ResponseExpectedBy__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue Vaccination Invitations</label>
</ListView>